- [BUG FIX] The definition file editor didn't work until ver.5.5-dev or around.
- [BUG FIX] The page file editor didn't work until ver.5.5-dev or around.
- [BUG FIX] The tinymce widget support code bug fix.
- [BUG FIX] Text field by input tag on IE prevent to use input method. This issue was fixed. The affected 
  versions are 5.4 and 5.5.
- [FYI] The file Samples/sample_memo_html5.html is removed. It wasn't working in long time.

Ver.5.5 (October 13, 2016)
- Support PHP 7 and checking on 7.1.0 Release Candidate 2, too.
- Add "phpseclib_v2" (phpseclib 2.0.3) in "lib" directory for supporting PHP 7.
- Add "Constant-Time Encoding" in "lib" directory for phpseclib 2.0.
  <https://github.com/paragonie/constant_time_encoding>
- In SQL Database, NULL value of date or datetime type fields are falling down zero components data,
  such as 0000-00-00 00:00:00. So the zeros data handles the same as a blank.
- Tests for sample web pages by Selenium Web Driver are introduced.
- The Access-Control-Allow-Origin header can be appended with variable $accessControlAllowOrigin
  in params.php file.
- Update sample_schema_mysql.txt, recipe.rb and sample_spec.rb for the INTER-Mediator-Server VM.
- The getDataAtLastRecord(key) method in IMLibContext class is added.
- The setValue method of IMLibContext class returns affected node's id attribute values.
- If nullable and numeric field is updated/created with "" value, write the value as NULL.
  This behavior requires to set blank in case of updating text field with no string.
- The record to merge an e-mail is retrieved from the database class's instance. This means
  if you want to add/modify fields for e-mail, you can describe codes in advisor classes, but
  you have to use the setUpdatedRecord method to send values you modified to mail processor.
- [BUG FIX] In case of the '#' target specification was placed on second or later item in data-im