@@ -60,6 +60,7 @@ Ver.5.6 (in development)
 - [BUG FIX] The tinymce widget support code bug fix.
 - [BUG FIX] Text field by input tag on IE prevent to use input method. This issue was fixed. The affected 
   versions are 5.4 and 5.5.
+- [BUG FIX] Qdsmtp couldn't send email with Gmail account for protocol stricting. The bundled Qdsmtp is patched.
 - [FYI] The file Samples/sample_memo_html5.html is removed. It wasn't working in long time.
 
 Ver.5.5 (October 13, 2016)
